docs: 更新說明文件準備上架
- 完善專案描述與功能說明
- 改進安裝與使用說明
- 新增適用範圍與設計考量章節
- 準備 Chrome 應用程式商店上架文件

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ node_modules/
 # ------------------------
 dist/
 
+# Release zip
+chatgpt-cleaner-*.zip
+
 # ------------------------
 # TypeScript build cache
 # ------------------------
